=== 3.6.1

* Bug fixes
  * Fix infinite loop created when re-encountering BasicObject.

=== 3.6 / 2011-05-13

* Major Enhancements
  * Interactive ri is now the default when no names are given.
* Minor Enhancements
  * RDoc::RDoc#generate was added to allow multiple generators to be used with
    a set of parsed file info.
  * RDoc::Options#finish can be called multiple times now.
  * `ri -i` only shows one level of namespace when completing class names.
  * Added `ri --list` for explicit listing.  `ri -l F G` will list all classes
    or modules starting with F or G
* Bug fixes
  * Remove windows-specific test for test_check_files, it is too hard to do.
    Ruby commit r30811 by Usaku Nakamura.
  * Remove unnecessary (and wrong) platform-dependent hacks.  Ruby commit
    r30829 by Usaku Nakamura.
  * Completing via Array#[ in `ri -i` no longer crashes.  Ruby Bug #3167
  * Completing IO::o in `ri -i` now returns results.  Ruby Bug #3167
  * RDoc::Parser::C ignores prototypes better.  Pull Request #34 by Pete
    Higgins.
  * private_class_method and public_class_method are now parsed correctly for
    inherited methods.  Issue #16 by gitsucks.
  * The doc directive now forces documentation even when the method is marked
    private or protected.

=== 3.5.3 / 2010-02-06

* Bug fixes
  * When including a file lossily force-transcode it to the output encoding
    instead of crashing to preserve as much content as possible.  Ruby Bug
    #4376 by Yui NARUSE.
  * Work around inconsistent encoding result from String#sub!, String#gsub!.
    Related to Ruby Bug #4376.
  * Work around inconsistent encoding result from String#[]=.  Related to Ruby
    Bug #4376.
  * When Darkfish fails the file being generated is now reported.

=== 3.5.2 / 2010-02-04

* Deprecations
  * RDoc::Context::Section#sequence is now deprecated.  Use
    RDoc::Context::Section#aref instead.

* Bug fixes
  * Fixed syntax highlighting CSS class generation.  Reported by Daniel
    Bretoi.